--- a/debian/rules
+++ b/debian/rules
@@ -55,10 +55,12 @@ override_dh_install:
 	install -D meta/build/dist/etc/init.d/beegfs-meta.init debian/beegfs-meta.init
 	install -D mgmtd/build/dist/etc/init.d/beegfs-mgmtd.init debian/beegfs-mgmtd.init
 	install -D helperd/build/dist/etc/init.d/beegfs-helperd.init debian/beegfs-helperd.init
+	install -D mon/build/dist/etc/init.d/beegfs-mon.init debian/beegfs-mon.init
 	cat common_package/build/dist/etc/init.d/beegfs-service.init >> debian/beegfs-storage.init
 	cat common_package/build/dist/etc/init.d/beegfs-service.init >> debian/beegfs-meta.init
 	cat common_package/build/dist/etc/init.d/beegfs-service.init >> debian/beegfs-mgmtd.init
 	cat common_package/build/dist/etc/init.d/beegfs-service.init >> debian/beegfs-helperd.init
+	cat common_package/build/dist/etc/init.d/beegfs-service.init >> debian/beegfs-mon.init
 	@# daemon configs and defaults
 	install -D -m644 storage/build/dist/etc/default/beegfs-storage \
 		debian/beegfs-storage.default
@@ -76,6 +78,10 @@ override_dh_install:
 		debian/beegfs-helperd.default
 	install -D -m644 helperd/build/dist/etc/beegfs-helperd.conf \
 		debian/beegfs-helperd/etc/beegfs/beegfs-helperd.conf
+	install -D -m644 mon/build/dist/etc/default/beegfs-mon \
+		debian/beegfs-mon.default
+	install -D -m644 mon/build/dist/etc/beegfs-mon.conf \
+		debian/beegfs-mon/etc/beegfs/beegfs-mon.conf
 	@# admon is special
 	install -D admon/build/dist/etc/init.d/beegfs-admon.init debian/beegfs-admon.init
 	#add the genric part of the init script from the common package
@@ -113,6 +119,9 @@ override_dh_install:
 	mkdir -p debian/beegfs-admon/var/lib/beegfs
 	# mongoose document root
 	mkdir -p debian/beegfs-admon/var/lib/beegfs/www
+	@# mon
+	mkdir -p debian/beegfs-mon/opt/beegfs/lib/grafana
+	cp -a mon/scripts/grafana/* debian/beegfs-mon/opt/beegfs/lib/grafana
 	@# upgraders
 	install -D upgrade/beegfs_mirror_md/build/beegfs-mirror-md \
 		debian/beegfs-mirror-md/opt/beegfs/sbin/beegfs-mirror-md
@@ -210,7 +219,7 @@ override_dh_strip:
 
 # avoid auto-start because default config is not useful
 override_dh_installinit:
-	for component in storage meta mgmtd helperd; do \
+	for component in storage meta mgmtd helperd mon; do \
 		cp $$component/build/dist/usr/lib/systemd/system/beegfs-$$component.service debian/; \
 		install -D -m644 $$component/build/dist/usr/lib/systemd/system/beegfs-$$component@.service \
 			debian/beegfs-$$component/lib/systemd/system/beegfs-$$component@.service; \
