--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ PAREN = )
 BEEGFS_VERSION = $(shell head -n1 debian/changelog | grep -P --only-matching '(?<=\d:)[^$(PAREN)~]+')
 BEEGFS_MAJOR = $(shell head -n1 debian/changelog | grep -P --only-matching '(?<=\d:)\d+')
 
-BEEFGS_NVFS=1
+BEEGFS_NVFS=1
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
