update to release 7.3.2

--- a/client_module/source/Makefile
+++ b/client_module/source/Makefile
@@ -32,6 +32,7 @@ obj-m	+= ${TARGET}.o
 
 SOURCES := \
    fault-inject/fault-inject.c \
+   os/iov_iter.c \
    os/atomic64.c \
    os/OsCompat.c \
    os/OsDeps.c \
