--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: optional
 Maintainer: BeeGFS Maintainers <packages@beegfs.com>
 Build-Depends: debhelper (>= 9.0.0), lsb-release, librdmacm-dev, libibverbs-dev, java6-sdk, ant, kmod,
-               dkms, pkg-config, zlib1g-dev
+               dkms, pkg-config, zlib1g-dev, libnl-3-dev, libnl-route-3-dev
 Standards-Version: 4.1.4.1
 
 
