--- a/debian/rules
+++ b/debian/rules
@@ -169,6 +169,7 @@ override_dh_install:
 	mkdir -p debian/beegfs-client-dkms/usr/src/beegfs-$(BEEGFS_VERSION)
 	cp -r client_module/build debian/beegfs-client-dkms/usr/src/beegfs-$(BEEGFS_VERSION)
 	cp -r client_module/source debian/beegfs-client-dkms/usr/src/beegfs-$(BEEGFS_VERSION)
+	cp -r client_module/include debian/beegfs-client-dkms/usr/src/beegfs-$(BEEGFS_VERSION)
 	rm -Rf debian/beegfs-client-dkms/usr/src/beegfs-$(BEEGFS_VERSION)/build/dist
 	sed -e 's/__VERSION__/$(BEEGFS_VERSION)/g' -e 's/__NAME__/beegfs/g' -e 's/__MODNAME__/beegfs/g' \
 		< client_module/dkms.conf.in \
@@ -180,6 +181,8 @@ override_dh_install:
 	@# client-dev
 	mkdir -p debian/beegfs-client-dev/usr/include
 	cp -a client_devel/include/beegfs debian/beegfs-client-dev/usr/include/
+	cp -a client_module/include/uapi/* debian/beegfs-client-dev/usr/include/beegfs/
+	sed -i '~s~uapi/beegfs_client~beegfs/beegfs_client~g' debian/beegfs-client-dev/usr/include/beegfs/*.h
 	mkdir -p debian/beegfs-client-dev/usr/share/doc/beegfs-client-dev/examples/
 	cp -a client_devel/build/dist/usr/share/doc/beegfs-client-devel/examples/* \
 		debian/beegfs-client-dev/usr/share/doc/beegfs-client-dev/examples/
